<resources>
    <string name="app_name">CV Builder</string>
    <string name="cv_builder">CV Builder</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="summary">Summary</string>
    <string name="education">Education</string>
    <string name="references">References</string>
    <string name="personal_details">Personal Details</string>
    <string name="certifications">Certifications</string>
    <string name="experience">Experience</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phone_numbxer">Enter Phone Numbxer</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="write_a_bit_about_yourself">Write a bit about yourself</string>
    <string name="enter_institution">Enter Institution</string>
    <string name="enter_degree">Enter Degree</string>
    <string name="enter_year_of_completion">Enter Year of Completion</string>
    <string name="enter_job_title">Enter Job Title</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="duration_e_g_jan_2022_dec_2022">Duration (e.g., Jan 2022 - Dec 2022)</string>
    <string name="enter_job_description">Enter Job Description</string>
    <string name="enter_your_cercitications_here_with_valid_id_s">Enter your Certifications here with valid id\'s</string>
    <string name="google_developer_certification">Google Developer Certification</string>
    <string name="google_developer_certification_88985">Google Developer Certification 88985</string>
    <string name="enter_your_references_with_details">Enter your References with details</string>
    <string name="kindly_select_gender">Kindly Select Gender</string>
    <string name="enter_data_of_birth_yyyy_mm">Enter data of birth YYYY-MM</string>
    <string name="enter_birth_year">Enter Birth Year</string>
    <string name="summaryy">Summary</string>
    <string name="neducation">Education</string>
    <string name="job_details">Job Details</string>
    <string name="certificationss">Certifications</string>
    <string name="referencess">References</string>
    <string name="share_cv">Share CV</string>
</resources>