<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".HomeActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="25dp"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        >
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_picture"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:id="@+id/profile_pic_id"
            android:paddingVertical="15dp"
            android:layout_marginVertical="10dp"
            >
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_details"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:id="@+id/personal_details_id"
            android:paddingVertical="15dp"
            android:layout_marginVertical="10dp"
            >
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:id="@+id/summary_id"
            android:paddingVertical="15dp"
            android:layout_marginVertical="10dp"
            >
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/education"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:id="@+id/education_id"
            android:paddingVertical="15dp"
            android:layout_marginVertical="10dp"
            >
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/experience"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:id="@+id/experience_id"
            android:paddingVertical="15dp"
            android:layout_marginVertical="10dp"
            >
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/certifications"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:id="@+id/certifications_id"
            android:paddingVertical="15dp"
            android:layout_marginVertical="10dp"
            >
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/references"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:id="@+id/references_id"
            android:paddingVertical="15dp"
            android:layout_marginVertical="10dp"
            >
        </Button>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:backgroundTint="@color/red"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="17dp"
            android:id="@+id/final_submit"
            android:paddingVertical="15dp"
            android:layout_marginHorizontal="80dp"
            android:layout_marginVertical="10dp"
            >
        </Button>





        
        
        
    </LinearLayout>


</LinearLayout>