<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Experience">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/job_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:gravity="center"
            android:hint="@string/enter_job_title" />


        <EditText
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_company_name"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/job_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:gravity="center"
            android:hint="@string/duration_e_g_jan_2022_dec_2022"
            android:layout_marginTop="8dp" />


        <EditText
            android:id="@+id/job_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_job_description"
            android:inputType="textMultiLine"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="8dp" />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:backgroundTint="#950F0F"
                android:layout_marginTop="10dp"
                android:id="@+id/exp_submit"
                >
            </Button>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:backgroundTint="#950F0F"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:id="@+id/exp_clear"
                android:layout_toRightOf="@id/exp_submit"
                android:layout_marginHorizontal="10dp"
                >

            </Button>



        </RelativeLayout>
    </LinearLayout>

</LinearLayout>