<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".Education">

    <EditText
        android:id="@+id/degree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:gravity="center"
        android:inputType="text"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/enter_degree" />

    <EditText
        android:id="@+id/et_institution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_institution"
        android:inputType="text"
        android:gravity="center"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/et_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_year_of_completion"
        android:gravity="center"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="date"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:backgroundTint="#950F0F"
            android:layout_marginTop="10dp"
            android:id="@+id/education_submit"
            >
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:backgroundTint="#950F0F"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/education_clear"
            android:layout_toRightOf="@id/education_submit"
            android:layout_marginHorizontal="10dp"
            >

        </Button>



    </RelativeLayout>

</LinearLayout>