<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:paddingTop="20dp"
    tools:context=".Certifications">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_cercitications_here_with_valid_id_s"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:textStyle="bold"

        >

    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:paddingHorizontal="20dp"
        android:id="@+id/certifications"
        android:paddingTop="20dp"
        android:hint="@string/google_developer_certification_88985"

        >

    </EditText>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:backgroundTint="#950F0F"
            android:layout_marginTop="10dp"
            android:id="@+id/cert_submit"
            >
        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:backgroundTint="#950F0F"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/cert_clear"
            android:layout_toRightOf="@id/cert_submit"
            android:layout_marginHorizontal="10dp"
            >

        </Button>



    </RelativeLayout>




</LinearLayout>