<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".Summary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_a_bit_about_yourself"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        >

    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/user_summary_id"
        >

    </EditText>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:backgroundTint="#950F0F"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/summary_clear"
            android:layout_marginHorizontal="10dp"
            >

        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:backgroundTint="@color/red"
            android:layout_marginTop="10dp"
            android:id="@+id/summary_submit"
            android:layout_toRightOf="@id/summary_clear"
            >
        </Button>





    </RelativeLayout>



</LinearLayout>