<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".References">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_references_with_details"
        android:textSize="20dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"

        >

    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:paddingHorizontal="20dp"
        android:id="@+id/references"
        android:paddingTop="20dp"
        android:gravity="center"
        android:hint="abc 123456789"

        >

    </EditText>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="90dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:backgroundTint="@color/red"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/ref_clear"
            android:layout_marginHorizontal="10dp"
            >

        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:backgroundTint="@color/red"
            android:layout_marginTop="10dp"
            android:id="@+id/ref_submit"
            android:layout_toRightOf="@id/ref_clear"
            >
        </Button>





    </RelativeLayout>


</LinearLayout>